tests/snapshots/parser_snapshots__parser_all@ast-60.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_extern_function_pointer_param_and_return.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "malloc",
                        has_self_param: false,
                        is_extern: true,
                        generics: [],
                        return_type: Some(
                            Pointer(
                                Named(
                                    "Buffer",
                                    [],
                                ),
                            ),
                        ),
                        params: [
                            ParamDecl {
                                name: "size",
                                ty: Primitive(
                                    Uint64,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: None,
                        span: Span {
                            line: 1,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 16,
                    len: 8,
                },
            },
        ],
    },
)
