tests/snapshots/parser_snapshots__parser_all@ast-62.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_extend_with_method.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Extend(
                    ExtendDecl {
                        target: Named(
                            "Foo",
                            [],
                        ),
                        generic_params: [],
                        implements: [],
                        methods: [
                            FunctionDecl {
                                name: "baz",
                                has_self_param: false,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        Bool,
                                    ),
                                ),
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: None,
                                    },
                                ),
                                span: Span {
                                    line: 1,
                                    col: 22,
                                    len: 8,
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
