tests/snapshots/parser_snapshots__parser_all@ast-67.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_function_no_params.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "noop",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
