tests/snapshots/parser_snapshots__parser_all@ast-68.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_extern_function_type_alias.of
---
Ok(
    Program {
        items: [
            Item {
                kind: TypeAlias(
                    TypeAliasDecl {
                        name: "Fun",
                        generics: [],
                        ty: ExternFunction(
                            [
                                ExternParam {
                                    name: "x",
                                    ty: Named(
                                        "MyStruct",
                                        [],
                                    ),
                                    is_pointer: false,
                                },
                            ],
                            Primitive(
                                Bool,
                            ),
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 5,
                    len: 4,
                },
            },
        ],
    },
)
