tests/snapshots/parser_snapshots__parser_all@ast-7.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/07_structs.of
---
Err(
    "unexpected token 'self'",
)
