tests/snapshots/parser_snapshots__parser_all@ast-72.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/parser/parse_extern_function_simple.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "print",
                        has_self_param: false,
                        is_extern: true,
                        generics: [],
                        return_type: None,
                        params: [
                            ParamDecl {
                                name: "value",
                                ty: Primitive(
                                    String,
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 16,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 16,
                    len: 8,
                },
            },
        ],
    },
)
